2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Updated.
	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic: Translation fixes.

2007-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs: Moved from CSharpTextEditorExtension.
	* Gui/CSharpParameterDataProvider.cs, Gui/CSharpTextEditorExtension.cs,
	  CSharpBinding.mdp, Makefile.am: Implemented support for parameter
	  information window.
	* Parser/Resolver.cs: When searching a class, look in the calling class
	  namespace before looking in using directives. Some fixes for
	  generic types.
	* Parser/CodeGenerator.cs: Some fixes for generic types.
	* Parser/SharpDevelopTree/ReturnType.cs: Use our own system type table,
	  since the one from NRefactory has some VB types and does case
	  insensitive lookups.
	* CSharpAmbience.cs: Added some ConvertTypeName calls to show the
	  correct name for instantiated generic types.

2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp,
	  gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic, Makefile.am: i18n fixes.

2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Cosmetic fixes in code completion
	  of "new".

2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Implemented
	  code completion for "throw new". Don't show interfaces and abstract
	  classes when completing "new".
	* Parser/Parser.cs: Removed.
	* CSharpAmbience.cs: Make sure instantiated generic classes are shown
	  with the correct name.

2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: When typing '#', move it to the
	  first column is there is no other text before. Implemented code
	  completion for compiler directives. Don't show sealed methods in
	  the overridable list.

2007-02-02  Ankit Jain  <jankit@novell.com>
