@@ -1,3 +1,9 @@
+2007-02-09  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* CSharpAmbience.cs: When converting a class, honor
+	  UseFullyQualifiedName flag.
+	* Makefile.am: distcheck fixes
+
 2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CSharpBinding.mdp: Updated.
